<?xml version="1.0" encoding="utf-8"?>
<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        style="@style/AppTheme.Toolbar"
        app:title="@string/title_gesture" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/title_pattern_setting" />

    <Button
        android:id="@+id/btnChecking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSetting"
        android:text="@string/title_pattern_checking" />

</RelativeLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--toolbar-->
    <!--<com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            style="@style/AppTheme.Toolbar"
            app:title="@string/title_gesture" />

    </com.google.android.material.appbar.AppBarLayout>-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:navigationIcon="@mipmap/back"
        app:title="@string/gesture"
        />

    <Button
        android:id="@+id/create_gesture"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:text="@string/create_gesture"
        android:layout_marginTop="@dimen/_50dp"
        android:layout_gravity="center"
        android:textSize="36dp" />

    <Button
        android:id="@+id/login_gesture"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:text="@string/login_gesture"
        android:layout_gravity="center"
        android:textSize="36dp" />
</LinearLayout>